@@ -1,4 +1,5 @@
 1.2.15.dev0
+ * #136: Handle and format validation errors raised during argument parsing.
 
 1.2.14
  * #103: When generating sample configuration with generate-borgmatic-config, document the defaults
